--- a/special-pages/pages/onboarding/app/v4/components/SingleStep.module.css
+++ b/special-pages/pages/onboarding/app/v4/components/SingleStep.module.css
@@ -66,3 +66,9 @@
         translate: 0 0;
     }
 }
+
+@media (prefers-reduced-motion: reduce) {
+    .bubbleIntro {
+        animation: none;
+    }
+}
