--- a/special-pages/pages/onboarding/app/v4/components/WelcomeContent.module.css
+++ b/special-pages/pages/onboarding/app/v4/components/WelcomeContent.module.css
@@ -76,3 +76,13 @@
         opacity: 0;
     }
 }
+
+@media (prefers-reduced-motion: reduce) {
+    .title {
+        animation: none;
+    }
+
+    .logo {
+        animation: none;
+    }
+}
